--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build
         uses: actions/setup-node@master
         with:
-          node-version: '16.x'
+          node-version: 'v16.16.0'
       - run: npm install # 安装依赖
       - run: npm run build # 打包
 
