--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: '^18.17.0'
 
-      - run: npm install # 安装依赖
+      - run: npm install --legacy-peer-deps # 安装依赖
       - run: npm run build # 打包
 
       # 部署到 GitHub pages
