--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.7.3",
     "eslint": "^8.49.0",
+    "eslint-config-next": "^13.5.4",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "postcss": "^8.4.24",
     "prettier": "^3.0.3",
+    "prettier-eslint": "^15.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
