--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: deploy
 
 on:
   push:
+    tags: -"v*"
     branches: [nextBlog] # master 分支有 push 时触发
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
       - README.md
@@ -30,6 +31,8 @@ jobs:
         with:
           publish_dir: ./dist # 部署打包后的 dist 目录
           github_token: ${{ secrets.DEPLOY_SECRET }} # secret 名
+          tag_name: ${{ steps.get_version.outputs.VERSION }}
+          release_name: ${{ steps.get_version.outputs.VERSION }}
           user_name: ${{ secrets.MY_USER_NAME }}
           user_email: ${{ secrets.MY_USER_EMAIL }}
           commit_message: 自动部署 # 部署时的 git 提交信息，自由填写
