--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: deploy
 on:
   push:
     tags: -"v*"
-    branches: [nextBlog] # master 分支有 push 时触发
+    branches: [nextBlog] # nextBlog 分支有 push 时触发
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
       - README.md
 
