--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,6 @@ jobs:
           github_token: ${{ secrets.DEPLOY_SECRET }} # secret 名
           tag_name: ${{ steps.get_version.outputs.VERSION }}
           release_name: ${{ steps.get_version.outputs.VERSION }}
-          user_name: ${{ secrets.MY_USER_NAME }}
-          user_email: ${{ secrets.MY_USER_EMAIL }}
-          commit_message: 自动部署 # 部署时的 git 提交信息，自由填写
+          # user_name: ${{ secrets.MY_USER_NAME }}
+          # user_email: ${{ secrets.MY_USER_EMAIL }}
+          # commit_message: 自动部署 # 部署时的 git 提交信息，自由填写
