--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,10 @@ jobs:
         run: pnpm install
       - name: 打包 🏗️
         run: |
+          pnpm rebuild node-sass 
           pnpm run build
           touch out/.nojekyll
+      # solve no such file or directory, scandir
       # - run: npm install --legacy-peer-deps # 安装依赖
       # - run: npm run build # 打包
 
